--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ ipython==8.5.0
 ipython-genutils==0.2.0
 jedi==0.18.1
 Jinja2==3.1.2
+joblib==1.2.0
 json5==0.9.10
 jsonschema==4.16.0
 jupyter-core==4.11.1
@@ -88,8 +89,11 @@ pyzmq==24.0.1
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
+scikit-learn==1.1.2
+scipy==1.9.1
 Send2Trash==1.8.0
 six==1.16.0
+sklearn==0.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 stack-data==0.5.1
@@ -101,6 +105,7 @@ tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.27.0
 termcolor==2.0.1
 terminado==0.16.0
+threadpoolctl==3.1.0
 tinycss2==1.1.1
 tomli==2.0.1
 tornado==6.2
