--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,7 @@ requests-oauthlib==1.3.1
 rsa==4.9
 scikit-learn==1.1.2
 scipy==1.9.1
+seaborn==0.12.0
 Send2Trash==1.8.0
 six==1.16.0
 sklearn==0.0
